# sourceagent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: benchmark_gap_and_experiment_design_20260312.md  binagent_review_contract_20260309.md  build_progress_report_20260312.py  canonical_cve_diagnosis_20260312_zh.md  combined_eval_gt_plus_nogt_20260309.json  combined_eval_gt_plus_nogt_20260309.md  combined_eval_gt_plus_nogt_20260309_zh.md  current_capability_boundary_20260310.json  current_capability_boundary_20260310_zh.md  eval_artifacts.md  eval_suite_unstripped_elf_report_en.md  eval_suite_unstripped_elf_report_zh.md  execution_plan_post_boundary_20260310_zh.md  generate_eval_report.py  gt_backed_suite_results_20260308.md  gt_backed_suite_v2_results_20260308.md  phase4e_sink_eval_fixplan.md  phase4e_sink_eval_report.md  phaseA_llm_supervision_code_planning.md  phaseb_case_studies_20260312.md  phaseb_cve_answer_chain_diagnostic_20260312.md  pipeline_update_p0p1_report.md  planning_patch_v1_1_en.md  planning_patch_v1_1_zh.md  progress_report_20260312_en.md  progress_report_20260312_en.pptx  progress_report_20260312_zh.md  proposal_updated_v3_10_20260310.docx  raw_bin_bootstrap_planning_v1.md  review_default_on_eval_20260309.md  risk_calibration_focused_report_20260310_zh.md  rq1_implementation_status_report_2026-03-04.md  sample_status.md  semantic_reviewer_framework_20260309.md  sourceagent_binagent_integration_20260309.md  sourceagent_p2im_evaluation_report.docx  sourceagent_sections4_9_detailed_planning.docx  (+12 more)
rq1_bin_case_study/: README.txt  (+4 more)
(+746 files in other folders)
