[project]
name = "sourceagent"
version = "0.1.0"
description = "RQ1: Semantic source/sink label recovery for monolithic firmware"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Masic"}]
keywords = ["firmware", "binary-analysis", "source-sink", "llm", "ghidra", "arm", "cortex-m"]

dependencies = [
    "litellm>=1.40.0",
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "tiktoken>=0.7.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]
observability = ["langfuse>=2.0.0"]
all = ["sourceagent[dev,observability]"]

[project.scripts]
sourceagent = "sourceagent.interface.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sourceagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
